add children component code

--- a/010-react-props-tut/src/index.css
+++ b/010-react-props-tut/src/index.css
@@ -8,3 +8,12 @@ body {
 .error {
     background: lightcoral;
 }
+
+.greeting-wrapper {
+    background-color: rgb(61, 17, 102);
+    color: #fff;
+    padding: 2rem;
+    border-radius: 1rem;
+    max-width: 600px;
+    margin: 2rem auto;
+}
