--- a/014-react-form-and-project/src/TodoInputForm.css
+++ b/014-react-form-and-project/src/TodoInputForm.css
@@ -21,6 +21,7 @@ input[type="submit"] {
     color: #f5f6fa;
     height: fit-content;
     border: none;
-    padding: 0.3rem;
+    padding: 0.3rem 0.7rem;
     cursor: pointer;
+    font-size: 1rem;
 }
