add complete and clear all todos functionality

--- a/014-react-form-and-project/src/Todo.css
+++ b/014-react-form-and-project/src/Todo.css
@@ -24,3 +24,8 @@ button {
 .todoName {
     text-transform: capitalize;
 }
+
+.completed {
+    text-decoration: line-through;
+    opacity: 0.6;
+}
