--- a/014-react-form-and-project/src/App.css
+++ b/014-react-form-and-project/src/App.css
@@ -42,3 +42,18 @@
     width: 90%;
     margin: 1rem auto;
 }
+
+.toast {
+    position: absolute;
+    /* border: 2px solid red; */
+    top: -20%;
+    right: 2%;
+    background-color: white;
+    color: #282c34;
+    padding: 0.5rem 1rem;
+    border: 2px solid #61dafb;
+}
+
+.show-toast {
+    top: 2%;
+}
