--- a/025-react-ecommerce/src/index.css
+++ b/025-react-ecommerce/src/index.css
@@ -59,3 +59,13 @@ button:focus-visible {
         background-color: #f9f9f9;
     }
 }
+
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
+    width: 90%;
+}
+
+a {
+    color: white;
+}
