--- a/025-react-ecommerce/src/index.css
+++ b/025-react-ecommerce/src/index.css
@@ -13,14 +13,14 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
 }
-
 a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
+    color: white;
+    text-decoration: none;
 }
+
 a:hover {
-    color: #535bf2;
+    /* color: #535bf2; */
+    color: #c7c9f4;
 }
 
 h1 {
@@ -64,8 +64,4 @@ button:focus-visible {
     max-width: 1280px;
     margin: 0 auto;
     width: 90%;
-}
-
-a {
-    color: white;
 }
