--- a/026-react-recap-ecommerce/src/index.css
+++ b/026-react-recap-ecommerce/src/index.css
@@ -67,3 +67,15 @@ button:focus-visible {
         background-color: #f9f9f9;
     }
 }
+
+.container {
+    max-width: 1280px;
+    width: 90%;
+    margin: 5rem auto;
+}
+.gridContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 2rem;
+    column-gap: 1rem;
+}
